    newly created mailbox.
  - Undefined variable in src/right_main.php.
  - Security: Local file inclusion in functions/plugin.php with
    register_globals enabled, and magic_quotes disabled (reported by Denix
    Solutions).
  - Add note to conf.pl / config_default.php to warn users that set
    sensitive passwords in that file to properly secure it.

Version 1.4.6 - 23 February 2006
--------------------------------
  - Security: MagicHTML fix for comments in styles (reported
    by Scott Hughes) and parsing of u\rl (reported by
    Martijn Brinkers) which allowed for cross site scripting
    when using Internet Explorer [CVE-2006-0195].
  - Multi-line encoded headers were being deleted (#1394667).
  - Security: Prohibit IMAP injection attempts (reported by Vicente
    Aguilera) [CVE-2006-0377].
  - Handle unsolicited responses inside SORT responses properly.
  - Security: Fix possible cross site scripting through the right_main
    parameter of webmail.php. This now uses a whitelist of acceptable
    values. [CVE-2006-0188]
  - Removed invalid STARTTLS check from configtest.php script.
  - Added Georgian language support.

Version 1.4.6 Release Candidate 1 - 10 December 2005
----------------------------------------------------
  - Added Simple Green, Silver Steel, Wood, Bluesome, Simple Green2 and
    Simple Purple themes. Contributed by Pavel Spatny, Saku Lehtio 
    (#1188209), Vicky Pyne (#1217066 and #1217069).
  - Fixes for increased error checking in PHP 5.0.5+ array_shift() (#1237160).
    [PHP5]
  - Added extra checks in Delivery class for In-Reply-To header. Fixes
    E_NOTICE level warnings in PHP 5.0.4 and later (#1206474). [PHP5]
  - Added extra checks in SquirrelMail charset_encode() function in case
    somebody removes HTML to US-ASCII conversion library (#1239782).
  - Ported devel fixes for PHP 5.0.4 E_NOTICE warnings in Message class
    (#1164045). [PHP5]
  - Auto Refresh Folder List preference now defaults to 10 Minutes, add